# Xyllidium

./: .gitignore  README.md  launch_xyllidium.py  pyproject.toml  run_all.sh  run_xyllidium.sh
core/: Cargo.toml
core/keys/: keygen.py  node_id.txt  node_private.key  node_public.key
core/xcfc/: Cargo.toml
core/xntf/: Cargo.toml
core/xyllencore/: Cargo.toml  bridge_server.py  cap_handler.py  executor.py
core/xyllenor/: engine.py  temporal_decay.py  timevault_bridge.py  xap_handler.py
core/xyllira/: intent_graph.json  interpreter.py  run_pipeline.py  translator.py
core/xyls/: Cargo.toml
data/timevault/: CAP-087af0507236.stub.json  CAP-15f153dbd5e0.stub.json  CAP-168489d767ed.stub.json  CAP-181c2c418fc2.stub.json  CAP-19816c6dccf9.stub.json  CAP-1c9567a3c9e6.stub.json  CAP-358e20ffeaef.json  CAP-395668ab83f2.stub.json  CAP-5710f145ee56.stub.json  CAP-6df3c0da080f.stub.json  CAP-7d092e53a074.stub.json  CAP-8f4eab4e2cca.stub.json  CAP-a460dbc88b3a.stub.json  CAP-c146b10616ca.stub.json  CAP-c358f493e8cb.stub.json  CAP-e04ccdc6d1cf.json  XAP-1FEE8093FFE8.json  XAP-4296638DDE95.json  XAP-4FB9D7A3A9DD.json  XAP-59ED7A339D05.json  XAP-796663416CF5.json  XAP-7FE128A4C694.json  XAP-827EF860646C.json  XAP-954A81878024.json  XAP-A4E68FF29410.json  XAP-CD4B7EFDF1B5.json  XAP-CE0563A1C114.json
scripts/: stop_xyllidium.sh
wallet/xcc/: Cargo.toml  nano
wallet/xcc/src/: address.rs  entropy.rs  key_format.rs  keystore.rs  lib.rs  xaddr.rs  xka.rs  xkf.rs  xsf.rs  xwal.rs
wallet/xcc/src/xhss/: hybrid.rs  mod.rs  sphincs.rs  xmss.rs
wallet/xcc/src/xnee/: mod.rs
(+15 files in other folders)
