[package]
name = "xcc"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_core = "0.6"
bs58 = "0.4"
sha3 = "0.10"

aes-gcm = "0.10"
argon2 = "0.5"
password-hash = "0.5"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
lazy_static = "1.4"
hex = "0.4"
blake3 = "1.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["rt", "macros"] }
